--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zsh-syntax-highlighting (0.4.0-2) UNRELEASED; urgency=medium
+
+  * ...
+
+ -- Daniel Shahaf <danielsh@apache.org>  Mon, 30 Nov 2015 06:24:38 +0000
+
 zsh-syntax-highlighting (0.4.0-1) unstable; urgency=low
 
   * Initial release. (Closes: #802758)
