--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zsh-syntax-highlighting (0.4.1-2) UNRELEASED; urgency=medium
+
+  * ...
+
+ -- Daniel Shahaf <danielsh@apache.org>  Thu, 28 Jan 2016 03:25:51 +0000
+
 zsh-syntax-highlighting (0.4.1-1) unstable; urgency=medium
 
   * New upstream release.
