Post-release version number bump.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-zsh-syntax-highlighting (0.4.0-1~mentors1) unstable; urgency=low
+zsh-syntax-highlighting (0.4.0-1~mentors2) UNRELEASED; urgency=low
 
   * Initial release. (Closes: #802758)
 
