--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
 zsh-syntax-highlighting (0.3.0-1) UNRELEASED; urgency=low
 
-  * Team upload.
   * Initial release. (Closes: #XXXXXX)
 
- -- Carsten Hey <carsten@debian.org>  Tue, 20 Oct 2015 15:05:13 +0000
+ -- Daniel Shahaf <danielsh@apache.org>  Tue, 20 Oct 2015 15:05:13 +0000
