--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 zsh-syntax-highlighting (0.3.0-1) UNRELEASED; urgency=low
 
-  * Initial release. (Closes: #XXXXXX)
+  * Initial release. (Closes: #802758)
 
  -- Daniel Shahaf <danielsh@apache.org>  Tue, 20 Oct 2015 15:05:13 +0000
