--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-zsh-syntax-highlighting (0.3.0-1~mentors3) UNRELEASED; urgency=low
+zsh-syntax-highlighting (0.4.0-1) UNRELEASED; urgency=low
 
   * Initial release. (Closes: #802758)
 
- -- Daniel Shahaf <danielsh@apache.org>  Sun, 25 Oct 2015 13:37:32 +0000
+ -- Daniel Shahaf <danielsh@apache.org>  Fri, 27 Nov 2015 23:33:58 +0000
