Draft a 0.4.0 package [upstream 0.4.0 hasn't been created yet]
* README.Debian: Point to new consolidated file.
    [Upstream doesn't currently create that file, but that is planned to be
    merged before the release.]

* changelog: Update "Initial release." entry.

* patches/set-HOME-in-tests.patch: Remove as obsolete, as described wherein.

* patches/set-version.patch: Refresh.

* rules
  (override_dh_auto_install, override_dh_installchangelogs): Update for
     upstream changes: don't remove files that upstream no longer installs,
     and do remove files that it installs but are already installed by
     debhelper under other names.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-zsh-syntax-highlighting (0.3.0-1~mentors3) UNRELEASED; urgency=low
+zsh-syntax-highlighting (0.4.0~dev.r450-1) UNRELEASED; urgency=low
 
   * Initial release. (Closes: #802758)
 
- -- Daniel Shahaf <danielsh@apache.org>  Sun, 25 Oct 2015 13:37:32 +0000
+ -- Daniel Shahaf <danielsh@apache.org>  Wed, 18 Nov 2015 16:12:53 +0000
