--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 zsh-syntax-highlighting (0.4.0-2) UNRELEASED; urgency=medium
 
-  * ...
+  * Declare 'Enhances: zsh'.
 
  -- Daniel Shahaf <danielsh@apache.org>  Mon, 30 Nov 2015 06:24:38 +0000
 
