--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,17 @@
-zsh-syntax-highlighting (0.4.0-2) UNRELEASED; urgency=medium
+zsh-syntax-highlighting (0.5.0-1) UNRELEASED; urgency=medium
 
-  * Declare 'Enhances: zsh'.
+  * New upstream release.
+  * ...
 
- -- Daniel Shahaf <danielsh@apache.org>  Mon, 30 Nov 2015 06:24:38 +0000
+ -- Daniel Shahaf <danielsh@apache.org>  Sat, 06 Feb 2016 11:07:08 +0000
+
+zsh-syntax-highlighting (0.4.1-1) unstable; urgency=medium
+
+  * New upstream release.
+  * Packaging changes:
+    - Declare 'Enhances: zsh'.
+
+ -- Daniel Shahaf <danielsh@apache.org>  Wed, 27 Jan 2016 21:37:11 +0000
 
 zsh-syntax-highlighting (0.4.0-1) unstable; urgency=low
 
