changelog: Disambiguate version number in git HEAD
Ensure the version number in git HEAD is not any current or future package's
version number.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-zsh-syntax-highlighting (0.5.0-1) UNRELEASED; urgency=medium
+zsh-syntax-highlighting (0.5.0-1~git) UNRELEASED; urgency=medium
 
   * New upstream release.
   * Packaging changes:
